# homelab

./: .envrc  .gitignore  .sops.yaml  .terraform.lock.hcl  .tflint.hcl  .yamllint.yaml  Justfile  README.md  email.tf  flake.nix  lemmy.tf  main.tf  onboard.sh  outline.tf  reconnect.sh  renovate.json  simple-services.tf  vaultwarden.tf
.github/workflows/: applier.yml  combine-prs.yml  (+6 more)
.zed/: settings.json
applier/: Justfile  pyproject.toml
applier/applier/: app.py  commands.py  config.py  security.py
common/: default.nix  firewall.nix  locale.nix  networking.nix  nix.nix  packages.nix  ssh.nix  tunnel.nix  users.nix
components/: actualbudget.nix  atproto-pds.nix  atuin.nix  aws.nix  backblaze.nix  continuous-deployment.nix  database.nix  default.nix  git.nix  karakeep.nix  mealie.nix  meilisearch.nix  miniflux.nix  pvr.nix  reverse-proxy.nix  ssh-tunnel.nix  streaming.nix  tangled.nix  torrent.nix  vaultwarden.nix  vpn.nix  workflows.nix
config/: apply.sls  top.sls
evil-lair/: .gitignore  .terraform.lock.hcl  .tflint.hcl  Justfile  README.md  applier.tf  dns.tf  example.tfvars  iam.tf  instance.tf  main.tf  networking.tf  outputs.tf  ssm.tf  variables.tf
extra/: default.nix
hosts/: README.md  default.nix
nginx/: .gitignore  Dockerfile  README.md  build.sh
secrets/: default.nix  terraform.yaml
settings/: acme.nix  default.nix
state/: docker.sls  sudoers.sls  top.sls  users.sls
terraform/: .gitignore  .tflint.hcl  Justfile  aws.hcl  b2.hcl  cloudflare.hcl  email.tf  github.hcl  main.tf  root.hcl  simple-services.tf  tailscale.hcl  terragrunt.hcl
(+151 files in other folders)
