[tool.poetry]
name = "applier"
version = "0.1.0"
description = "Automatically apply SaltStack highstate on webhooks"
authors = ["Alex Krantz <alex@krantz.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
